--- a/structurizr-spring/build.gradle
+++ b/structurizr-spring/build.gradle
@@ -3,9 +3,9 @@ dependencies {
 
     compile 'com.structurizr:structurizr-core:1.3.5'
 
-    compile 'org.springframework:spring-web:4.2.9.RELEASE'
-    compile 'org.springframework.data:spring-data-jpa:1.9.4.RELEASE'
-    compile 'org.springframework.ws:spring-ws-core:2.4.2.RELEASE'
+    compile 'org.springframework:spring-web:5.3.19'
+    compile 'org.springframework.data:spring-data-jpa:2.6.4'
+    compile 'org.springframework.ws:spring-ws-core:3.1.3'
 
     testCompile 'junit:junit:4.12'
 
